THRIFT-3388 hash doesn't work on set/list Client: Python Patch: Jens Geyer

This essentially reverts commit 790a3881b2bd8d0e0f868e9f28205ea60cfb0f2d from THRIFT-2621