compiler/cpp/src/generate/t_py_generator.cc
@@ -753,16 +753,6 @@ void t_py_generator::generate_py_struct_definition(ofstream& out,
         << endl;
   }
 
-  out << indent() << "def __hash__(self):" << endl;
-  indent_up();
-  indent(out) << "value = 17" << endl; // PYTHONHASHSEED would be better, but requires Python 3.2.3
-  for (m_iter = members.begin(); m_iter != members.end(); ++m_iter) {
-    indent(out) << "value = (value * 31) ^ hash(self." << (*m_iter)->get_name() + ")" << endl;
-  }
-  indent(out) << "return value" << endl;
-  indent_down();
-  out << endl;
-
   if (!gen_slots_) {
     // Printing utilities so that on the command line thrift
     // structs look pretty like dictionaries
